# finitefield-quarry

./: .gitignore  README.md  prime_order_mss.py  pyproject.toml  search.py  search_tools.py
results/: prime_order_mss.txt
results/gaps/: power_field_solutions.txt  prime_field_solutions.txt
scripts/: gap_search.py  prime_order_mss.py
src/ffquarry/: gap_tools.py  power_field.py  prime_field.py
