[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "finitefield-quarry"
version = "0.1.0"
description = "Search for magic squares of squares over finite fields."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sympy",
    "galois",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ffquarry"]
